# simra_hackthon

./: VERCEL_DEPLOYMENT.md  api.py  tasks.md  vercel.json  vercel.jsonn
.specify/memory/: constitution.md
backend/: requirements.txt
backend/RAG_Chatbot/: .gitignore  README.md  pyproject.toml  run_preload.py  run_server.py  test_backend.py  test_server.py
backend/RAG_Chatbot/app/: config.py  generator.py  main.py  retriever.py  schemas.py  utils.py
backend/RAG_Chatbot/scripts/: preload.py
frontend/: CHATBOT_INTEGRATION.md  README.md  docusaurus.config.ts  sidebars.ts  tsconfig.json
frontend/docs/: chapter-1-introduction.md  chapter-10-manufacturing-logistics.md  chapter-11-isaac-sim-humanoids.md  chapter-12-manipulation-grasping.md  chapter-13-embodied-ai-and-foundation-models.md  chapter-14-physical-ai-for-real-world-robots.md  chapter-15-final-humanoid-project.md  chapter-2-kinematics-dynamics.md  chapter-3-sensing-perception.md  chapter-4-robot-control-systems.md  chapter-5-motion-planning-navigation.md  chapter-6-human-robot-interaction.md  chapter-7-learning-in-robotics.md  chapter-8-robotics-software-ros2.md  chapter-9-ethics-future.md  chapter-9-healthcare.md
frontend/src/css/: custom.css
history/prompts/001-ai-robotics-textbook/: 2-generate-ai-robotics-textbook-plan.plan.prompt.md  3-generate-ai-robotics-textbook-tasks.tasks.prompt.md
specs/001-ai-robotics-textbook/: plan.md  spec.md  tasks.md
specs/001-ai-robotics-textbook/checklists/: requirements.md
specs/textbook/: tasks.md
specs/textbook-chapters/: tasks.md
(+12 files in other folders)
